# WACL

./: .gitignore  LICENSE  README.md  pyproject.toml  t-.xlsx  wacl.py
WACL/: __init__.py  output2.xlsx  wacl.py
WACL/core/: icacls.py  report.py  xlsx.py
WACL/sample/: test.py
core/: __init__.py  icacls.py  report.py  xlsx.py
sample/: __init__.py  test.py
