[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "WACL"
version = "0.0.1"
authors = [
  { name="yuhekun", email="3320382157@qq.com" },
]
description = "Windows ACL Get Package."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "openpyxl==3.1.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/yalisandsoso/WACL"
"Bug Tracker" = "https://github.com/yalisandsoso/WACL"